--- a/pairing.html
+++ b/pairing.html
@@ -158,7 +158,7 @@
             <div class="wrapper">
                 <div class="content">
 
-                    <div class="title">Hi <span id="name"></span>! You are making a playlist for</div>
+                    <div class="title">Hi <span id="name"></span>! You are the secret weeb to</div>
                     <script>document.getElementById('name').innerText = name</script>
 
                     <div class="pairing">
@@ -181,13 +181,10 @@
                         </script>
                     </div>
 
-                    <div class="instructions">Playlists should be at least 7 songs. <br /> Our exchange will be on Friday Dec 22nd.</div>
+                    <div class="instructions">Maximum expected episodes are 13. <br /> Consider what you want your pleeb to watch wisely!</div>
 					
 					<div class="questions">
-						Not sure how to share your playlist? <a href="https://www.qr-code-generator.com/"> Generate a QR Code here!</a>
-					</div>
-					<div class="questions">
-						Questions? Need help? Not sure what to do? Ask Nicole!
+						Not sure what to pick? You can always rely on their Plan To Watch by going to #Announcements and checking their anime list!!</a>
 					</div>
 
                     <script>
