--- a/pairing.html
+++ b/pairing.html
@@ -184,7 +184,7 @@
                     <div class="instructions">Maximum expected episodes are 13. <br /> Consider what you want your pleeb to watch wisely!</div>
 					
 					<div class="questions">
-						Not sure what to pick? You can always rely on their Plan To Watch by going to #Announcements and checking their anime list!!</a>
+						Not sure what to pick? You can always rely on their Plan To Watch by going to #Announcements pins and checking their anime list!!</a>
 					</div>
 
                     <script>
